# mgmt-system

./: .gitignore  DEPLOYMENT_GUIDE.md  Dockerfile  README.md  fly.toml  index.html  main.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js
backend/: auth.py  database.py  main.py  models.py  seed.py
backend/routers/: auth_router.py  cash_router.py  dashboard_router.py  expenses_router.py  export_router.py  hr_router.py  purchases_router.py  sales_router.py
database/: migration-v10-legal-discount.sql  migration-v11-payment-modes-rls.sql  migration-v2.sql  migration-v3-receipt-linking.sql  migration-v4-user-roles.sql  migration-v5-contract-status-fix.sql  migration-v6-quantity-and-status.sql  migration-v7-storage-policies-fix.sql  migration-v8-suppliers-table.sql  migration-v9-partner-role-and-storage.sql  schema.sql
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  App.jsx  api.js  context.jsx
frontend/src/components/: BranchFilter.jsx  CashSheet.jsx  Dashboard.jsx  Expenses.jsx  ExportBar.jsx  HR.jsx  Layout.jsx  LoginPage.jsx  (+2 more)
src/: App.tsx  index.css
src/contexts/: AuthContext.tsx  LangContext.tsx
src/i18n/: ar.ts  en.ts
src/lib/: export-utils.ts  supabase.ts
src/pages/: AccountingPage.tsx  ContractLookupPage.tsx  CustomersPage.tsx  DashboardPage.tsx  ExpensesPage.tsx  InventoryPage.tsx  LegalCasesPage.tsx  LoginPage.tsx  OwnersPartnersPage.tsx  PurchasePage.tsx  ReceiptsPage.tsx  RevenueRecognitionPage.tsx  SalesPage.tsx  SetPasswordPage.tsx  UsersPage.tsx
(+56 files in other folders)
